static express file added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "node ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Tech1989plus1/derrickMarshall/issues"
   },
-  "homepage": "https://github.com/Tech1989plus1/derrickMarshall#readme"
+  "homepage": "https://github.com/Tech1989plus1/derrickMarshall#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
